fix scrollbar

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -70,7 +70,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 13px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
